// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckInButton should render a message when it is far in the future 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Unknown
    checkedIn={false}
    classes={Object {}}
    currentLocation={
      Object {
        "geometry": Object {
          "coordinates": Array [
            -10,
            0,
          ],
          "type": "Point",
        },
        "properties": Object {},
        "type": "Feature",
      }
    }
    currentUser={
      Object {
        "email": "",
      }
    }
    event={
      Object {
        "attendees": Array [],
        "checkIn": Object {
          "canCheckIn": false,
          "hasNotStarted": true,
          "isInPast": false,
          "isNearby": false,
        },
        "distance": 0,
        "end_timestamp": "2011-10-16T17:17:56.406Z",
        "geo": Object {
          "geometry": Object {
            "coordinates": Array [
              0,
              0,
            ],
            "type": "Point",
          },
          "properties": Object {},
          "type": "Feature",
        },
        "timestamp": "2011-10-16T17:02:56.406Z",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <UNDEFINED>
        <WithStyles(Badge)
          badgeContent={
            <FontAwesomeIcon
              border={false}
              className=""
              fixedWidth={false}
              flip={null}
              icon={
                Array [
                  "fa",
                  "hourglass",
                ]
              }
              inverse={false}
              listItem={false}
              mask={null}
              pull={null}
              pulse={false}
              rotation={null}
              size={null}
              spin={false}
              symbol={false}
              transform={null}
            />
          }
          color="secondary"
        >
          <Connect(Component)
            className={undefined}
          />
        </WithStyles(Badge)>
        RSVP
      </UNDEFINED>,
      "className": undefined,
      "onClick": [Function],
      "size": "large",
      "variant": "outlined",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <WithStyles(Badge)
            badgeContent={
              <FontAwesomeIcon
                border={false}
                className=""
                fixedWidth={false}
                flip={null}
                icon={
                  Array [
                    "fa",
                    "hourglass",
                  ]
                }
                inverse={false}
                listItem={false}
                mask={null}
                pull={null}
                pulse={false}
                rotation={null}
                size={null}
                spin={false}
                symbol={false}
                transform={null}
              />
            }
            color="secondary"
          >
            <Connect(Component)
              className={undefined}
            />
          </WithStyles(Badge)>,
          "RSVP",
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "badgeContent": <FontAwesomeIcon
              border={false}
              className=""
              fixedWidth={false}
              flip={null}
              icon={
                Array [
                  "fa",
                  "hourglass",
                ]
              }
              inverse={false}
              listItem={false}
              mask={null}
              pull={null}
              pulse={false}
              rotation={null}
              size={null}
              spin={false}
              symbol={false}
              transform={null}
            />,
            "children": <Connect(Component)
              className={undefined}
            />,
            "color": "secondary",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "className": undefined,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        "RSVP",
      ],
      "type": Symbol(react.fragment),
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <UNDEFINED>
          <WithStyles(Badge)
            badgeContent={
              <FontAwesomeIcon
                border={false}
                className=""
                fixedWidth={false}
                flip={null}
                icon={
                  Array [
                    "fa",
                    "hourglass",
                  ]
                }
                inverse={false}
                listItem={false}
                mask={null}
                pull={null}
                pulse={false}
                rotation={null}
                size={null}
                spin={false}
                symbol={false}
                transform={null}
              />
            }
            color="secondary"
          >
            <Connect(Component)
              className={undefined}
            />
          </WithStyles(Badge)>
          RSVP
        </UNDEFINED>,
        "className": undefined,
        "onClick": [Function],
        "size": "large",
        "variant": "outlined",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": Array [
            <WithStyles(Badge)
              badgeContent={
                <FontAwesomeIcon
                  border={false}
                  className=""
                  fixedWidth={false}
                  flip={null}
                  icon={
                    Array [
                      "fa",
                      "hourglass",
                    ]
                  }
                  inverse={false}
                  listItem={false}
                  mask={null}
                  pull={null}
                  pulse={false}
                  rotation={null}
                  size={null}
                  spin={false}
                  symbol={false}
                  transform={null}
                />
              }
              color="secondary"
            >
              <Connect(Component)
                className={undefined}
              />
            </WithStyles(Badge)>,
            "RSVP",
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "badgeContent": <FontAwesomeIcon
                border={false}
                className=""
                fixedWidth={false}
                flip={null}
                icon={
                  Array [
                    "fa",
                    "hourglass",
                  ]
                }
                inverse={false}
                listItem={false}
                mask={null}
                pull={null}
                pulse={false}
                rotation={null}
                size={null}
                spin={false}
                symbol={false}
                transform={null}
              />,
              "children": <Connect(Component)
                className={undefined}
              />,
              "color": "secondary",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "className": undefined,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          "RSVP",
        ],
        "type": Symbol(react.fragment),
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`CheckInButton should render a message when it was a long time ago 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Unknown
    checkedIn={false}
    classes={Object {}}
    currentLocation={
      Object {
        "geometry": Object {
          "coordinates": Array [
            -10,
            0,
          ],
          "type": "Point",
        },
        "properties": Object {},
        "type": "Feature",
      }
    }
    currentUser={
      Object {
        "email": "",
      }
    }
    event={
      Object {
        "attendees": Array [],
        "checkIn": Object {
          "canCheckIn": false,
          "hasNotStarted": false,
          "isInPast": true,
          "isNearby": false,
        },
        "distance": 0,
        "end_timestamp": "2011-09-16T17:17:56.406Z",
        "geo": Object {
          "geometry": Object {
            "coordinates": Array [
              0,
              0,
            ],
            "type": "Point",
          },
          "properties": Object {},
          "type": "Feature",
        },
        "timestamp": "2011-09-16T16:17:56.406Z",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <UNDEFINED>
        <WithStyles(Badge)
          badgeContent={
            <FontAwesomeIcon
              border={false}
              className=""
              fixedWidth={false}
              flip={null}
              icon={
                Array [
                  "fa",
                  "calendar-times",
                ]
              }
              inverse={false}
              listItem={false}
              mask={null}
              pull={null}
              pulse={false}
              rotation={null}
              size={null}
              spin={false}
              symbol={false}
              transform={null}
            />
          }
          color="error"
        >
          <Connect(Component)
            className={undefined}
          />
        </WithStyles(Badge)>
        I was here!
      </UNDEFINED>,
      "className": undefined,
      "onClick": [Function],
      "size": "large",
      "variant": "outlined",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <WithStyles(Badge)
            badgeContent={
              <FontAwesomeIcon
                border={false}
                className=""
                fixedWidth={false}
                flip={null}
                icon={
                  Array [
                    "fa",
                    "calendar-times",
                  ]
                }
                inverse={false}
                listItem={false}
                mask={null}
                pull={null}
                pulse={false}
                rotation={null}
                size={null}
                spin={false}
                symbol={false}
                transform={null}
              />
            }
            color="error"
          >
            <Connect(Component)
              className={undefined}
            />
          </WithStyles(Badge)>,
          "I was here!",
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "badgeContent": <FontAwesomeIcon
              border={false}
              className=""
              fixedWidth={false}
              flip={null}
              icon={
                Array [
                  "fa",
                  "calendar-times",
                ]
              }
              inverse={false}
              listItem={false}
              mask={null}
              pull={null}
              pulse={false}
              rotation={null}
              size={null}
              spin={false}
              symbol={false}
              transform={null}
            />,
            "children": <Connect(Component)
              className={undefined}
            />,
            "color": "error",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "className": undefined,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        "I was here!",
      ],
      "type": Symbol(react.fragment),
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <UNDEFINED>
          <WithStyles(Badge)
            badgeContent={
              <FontAwesomeIcon
                border={false}
                className=""
                fixedWidth={false}
                flip={null}
                icon={
                  Array [
                    "fa",
                    "calendar-times",
                  ]
                }
                inverse={false}
                listItem={false}
                mask={null}
                pull={null}
                pulse={false}
                rotation={null}
                size={null}
                spin={false}
                symbol={false}
                transform={null}
              />
            }
            color="error"
          >
            <Connect(Component)
              className={undefined}
            />
          </WithStyles(Badge)>
          I was here!
        </UNDEFINED>,
        "className": undefined,
        "onClick": [Function],
        "size": "large",
        "variant": "outlined",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": Array [
            <WithStyles(Badge)
              badgeContent={
                <FontAwesomeIcon
                  border={false}
                  className=""
                  fixedWidth={false}
                  flip={null}
                  icon={
                    Array [
                      "fa",
                      "calendar-times",
                    ]
                  }
                  inverse={false}
                  listItem={false}
                  mask={null}
                  pull={null}
                  pulse={false}
                  rotation={null}
                  size={null}
                  spin={false}
                  symbol={false}
                  transform={null}
                />
              }
              color="error"
            >
              <Connect(Component)
                className={undefined}
              />
            </WithStyles(Badge)>,
            "I was here!",
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "badgeContent": <FontAwesomeIcon
                border={false}
                className=""
                fixedWidth={false}
                flip={null}
                icon={
                  Array [
                    "fa",
                    "calendar-times",
                  ]
                }
                inverse={false}
                listItem={false}
                mask={null}
                pull={null}
                pulse={false}
                rotation={null}
                size={null}
                spin={false}
                symbol={false}
                transform={null}
              />,
              "children": <Connect(Component)
                className={undefined}
              />,
              "color": "error",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "className": undefined,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          "I was here!",
        ],
        "type": Symbol(react.fragment),
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`locationDisplay with current location should render a location description 1`] = `"LOCATION - Far away: 0 miles North"`;

exports[`locationDisplay with current location should render a location description without event location 1`] = `"Far away: 0 miles North"`;

exports[`locationDisplay without current location should render a location description 1`] = `"LOCATION"`;

exports[`locationDisplay without current location should render a location description without event location 1`] = `"Far away: 0 miles North"`;
